lot of refactoring, restored core to a compilable state