@@ -26,5 +26,58 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.treilhes.emc4j</groupId>
+                <artifactId>emc4j-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>resolve-jar-path</id>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.treilhes.jfxplace</groupId>
+                        <artifactId>javafx.graphics.patch</artifactId>
+                        <version>${jfxplace.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.treilhes.jfxplace</groupId>
+                        <artifactId>javafx.fxml.patch</artifactId>
+                        <version>${jfxplace.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <useModulePath>true</useModulePath>
+                    <compilerArgs>
+                        <arg>--patch-module</arg>
+                        <arg>javafx.fxml=${com.treilhes.jfxplace:javafx.fxml.patch:jar}</arg>
+                        <arg>--patch-module</arg>
+                        <arg>javafx.graphics=${com.treilhes.jfxplace:javafx.graphics.patch:jar}</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <useModulePath>true</useModulePath>
+                    <argLine>
+                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --patch-module javafx.graphics=${com.treilhes.jfxplace:javafx.graphics.patch:jar}
+                        --patch-module javafx.fxml=${com.treilhes.jfxplace:javafx.fxml.patch:jar}
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
